--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,27 +1,25 @@
 version: '3.8'
 
 services:
-  sample_frontend:
-    container_name: sample_frontend
+  frontend:
     build:
       context: ./frontend
       dockerfile: Dockerfile
     ports:
       - "80:3000"
     depends_on:
-      sample_backend:
+      backend:
         condition: service_healthy
     networks:
       - service-network
     command: sh -c "npm run build && npm start"
 
-  sample_backend:
-    container_name: sample_backend
+  backend:
     build:
       context: ./backend
       dockerfile: Dockerfile
     depends_on:
-      sample_db:
+      db:
         condition: service_healthy
     # environment:
     #   DB_CONNECTION: pgsql
@@ -31,7 +29,7 @@ services:
     #   DB_USERNAME: admin
     #   DB_PASSWORD: password
     healthcheck:
-      test: ["CMD-SHELL", "curl -f http://sample_backend || exit 1"]      
+      test: ["CMD-SHELL", "curl -f http://backend || exit 1"]      
       interval: 30s
       timeout: 10s
       retries: 5  
@@ -39,28 +37,26 @@ services:
       - service-network
     command: sh -c "php artisan migrate && apache2-foreground"
 
-  sample_db:
-    container_name: sample_db
+  db:
     build:
       context: ./db
       dockerfile: Dockerfile
     environment:
-      POSTGRES_DB: sample
-      POSTGRES_PORT: 5432
-      POSTGRES_USER: admin
-      POSTGRES_PASSWORD: password
+      POSTGRES_DB: $POSTGRES_DB
+      POSTGRES_PORT: $POSTGRES_PORT
+      POSTGRES_USER: $POSTGRES_USER
+      POSTGRES_PASSWORD: $POSTGRES_PASSWORD
     volumes:
       - pgdata:/var/lib/postgresql/data
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -d sample -h sample_db -p 5432 -U admin"]
-      interval: 30s
+      test: ["CMD-SHELL", "pg_isready -d $POSTGRES_DB -h $DB_CONTAINER_NAME -p $POSTGRES_PORT -U $POSTGRES_USER"]
+      interval: 5s
       timeout: 10s
       retries: 5  
     networks:
       - service-network
 
-  sample_pgadmin:
-    container_name: sample_pgadmin
+  pgadmin:
     image: dpage/pgadmin4:8.13
     environment:
       PGADMIN_DEFAULT_EMAIL: admin@example.com
@@ -68,7 +64,7 @@ services:
     ports:
       - "5050:80"
     depends_on:
-      sample_db:
+      db:
         condition: service_healthy
     networks:
       - service-network
