--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -24,9 +24,8 @@ COPY . /var/www/html
 RUN chown -R www-data:www-data /var/www/html \
     && chmod -R 755 /var/www/html
 
-# RUN composer install --no-dev --optimize-autoloader
+RUN composer install --no-dev --optimize-autoloader
 
 RUN find /var/www/html/vendor -type d -exec git config --global --add safe.directory {} \;
-
 
 CMD ["apache2-foreground"]
