--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,14 +6,13 @@ services:
       context: ./frontend
       dockerfile: Dockerfile
     ports:
-      - "80:3000"
+      - "${FRONTEND_LOCAL_PORT}:${FRONTEND_CONTAINER_PORT}"
     depends_on:
       backend:
         condition: service_healthy
     networks:
       - service-network
-    command: sh -c "npm run build && npm start"
-
+    command: sh -c "npm run lint && npm run build && npm start"
   backend:
     build:
       context: ./backend
@@ -21,48 +20,43 @@ services:
     depends_on:
       db:
         condition: service_healthy
-    # environment:
-    #   DB_CONNECTION: pgsql
-    #   DB_HOST: db
-    #   DB_PORT: 5432
-    #   DB_DATABASE: sample
-    #   DB_USERNAME: admin
-    #   DB_PASSWORD: password
+    env_file:
+      - .env
     healthcheck:
-      test: ["CMD-SHELL", "curl -f http://backend || exit 1"]      
-      interval: 30s
-      timeout: 10s
-      retries: 5  
+      test: ["CMD-SHELL", "curl -f ${BACKEND_URL} || exit 1"]      
+      interval: ${HEALTH_CHECK_INTERVAL}
+      timeout: ${HEALTH_CHECK_TIMEOUT}
+      retries: ${HEALTH_CHECK_RETRIES}
     networks:
       - service-network
     command: sh -c "php artisan migrate && apache2-foreground"
-
   db:
     build:
       context: ./db
       dockerfile: Dockerfile
     environment:
-      POSTGRES_DB: $POSTGRES_DB
-      POSTGRES_PORT: $POSTGRES_PORT
-      POSTGRES_USER: $POSTGRES_USER
-      POSTGRES_PASSWORD: $POSTGRES_PASSWORD
+      POSTGRES_DB: ${POSTGRES_DB}
+      POSTGRES_PORT: ${POSTGRES_PORT}
+      POSTGRES_USER: ${POSTGRES_USER}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
     volumes:
       - pgdata:/var/lib/postgresql/data
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -d $POSTGRES_DB -h $DB_CONTAINER_NAME -p $POSTGRES_PORT -U $POSTGRES_USER"]
-      interval: 5s
-      timeout: 10s
-      retries: 5  
+      test: ["CMD-SHELL", "pg_isready -d ${POSTGRES_DB} -h ${DB_CONTAINER_NAME} -p ${POSTGRES_PORT} -U ${POSTGRES_USER}"]
+      interval: ${HEALTH_CHECK_INTERVAL}
+      timeout: ${HEALTH_CHECK_TIMEOUT}
+      retries: ${HEALTH_CHECK_RETRIES}
     networks:
       - service-network
-
   pgadmin:
     image: dpage/pgadmin4:8.13
     environment:
-      PGADMIN_DEFAULT_EMAIL: admin@example.com
-      PGADMIN_DEFAULT_PASSWORD: admin
+      PGADMIN_DEFAULT_EMAIL: ${PGADMIN_DEFAULT_EMAIL}
+      PGADMIN_DEFAULT_PASSWORD: ${PGADMIN_DEFAULT_PASSWORD}
     ports:
-      - "5050:80"
+      - "${PGADMIN_LOCAL_PORT}:${PGADMIN_CONTAINER_PORT}"
+    volumes:
+      - pgadmin:/var/lib/pgadmin
     depends_on:
       db:
         condition: service_healthy
@@ -71,6 +65,7 @@ services:
 
 volumes:
   pgdata:
+  pgadmin:
 
 networks:
   service-network:
