--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 # backend
-APP_NAME=CutModel
+APP_NAME=NewCutMeets
 APP_ENV=local
 APP_KEY=base64:GywgVNjiW2VnKtwrsqSG19P/LNI9x6yo0iPMCuwCTHY=
 APP_DEBUG=true
