--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "@headlessui/react": "^2.2.0",
     "@heroicons/react": "^2.2.0",
+    "@iconify/react": "^5.2.0",
+    "@mui/icons-material": "^6.3.1",
     "@nextui-org/react": "^2.6.8",
     "framer-motion": "^11.15.0",
     "next": "15.1.0",
