--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,10 +12,9 @@
     "@headlessui/react": "^2.2.0",
     "@heroicons/react": "^2.2.0",
     "@iconify/react": "^5.2.0",
-    "@mui/icons-material": "^6.3.1",
     "@nextui-org/react": "^2.6.8",
     "framer-motion": "^11.15.0",
-    "next": "15.1.0",
+    "next": "^15.1.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
