--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "@headlessui/react": "^2.2.0",
     "@heroicons/react": "^2.2.0",
-    "@nextui-org/react": "^2.6.8",
+    "@heroui/react": "^2.6.14",
     "framer-motion": "^11.15.0",
     "next": "^15.1.4",
     "react": "^19.0.0",
