--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,7 +12,10 @@
     "@headlessui/react": "^2.2.0",
     "@heroicons/react": "^2.2.0",
     "@nextui-org/react": "^2.6.8",
+    "@radix-ui/react-slot": "^1.1.2",
+    "class-variance-authority": "^0.7.1",
     "framer-motion": "^11.15.0",
+    "lucide-react": "^0.475.0",
     "next": "^15.1.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
